--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_heroku_gol",
+  "name": "Programming-3",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,13 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hanumanum/test-heroku-gol.git"
+    "url": "git+https://github.com/YervandDev/Programming-3.git"
   },
-  "author": "hanuman",
+  "author": "YervandDev",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hanumanum/test-heroku-gol/issues"
-  },
+
   "homepage": "https://tumotestgol.herokuapp.com/",
   "dependencies": {
     "express": "^4.16.2"
